# valent-plugin-example

./: .gitignore  README.md  ca.andyholmes.Valent.Plugin.example.json  meson.build  meson_options.txt
.github/workflows/: cd.yml  ci.yml
data/: meson.build  template.gschema.xml.in  template.metainfo.xml.in  template.plugin.desktop.in
po/: LINGUAS  POTFILES  meson.build
src/: example-device-plugin.c  example-device-plugin.h  example-device-preferences-group.c  example-device-preferences-group.h  example-device-preferences-group.ui  example-device-preferences-page.c  example-device-preferences-page.h  example-device-preferences-page.ui  example-plugin.c  meson.build  template.gresource.xml.in
subprojects/: valent.wrap
tests/: meson.build
